// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Smoke Test > Config > should render without crashing 1`] = `
<DocumentFragment>
  <div
    class="jodit-react-container"
  >
    <div
      class="jodit-container jodit jodit_theme_default jodit-wysiwyg_mode jodit_disabled"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; --jd-jodit-workplace-height: auto; width: auto;"
    >
      <div
        class="jodit-toolbar__box"
      >
        <div
          class="jodit-toolbar-editor-collection jodit-toolbar-editor-collection_mode_horizontal jodit-toolbar-editor-collection_size_middle"
        >
          <input
            disabled="true"
            style="width: 0; height:0; position: absolute; visibility: hidden;"
            tab-index="-1"
          />
          <div
            class="jodit-ui-group jodit-ui-group_line_true jodit-ui-group_size_middle"
          >
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_font-style jodit-ui-group_size_middle"
            >
              <span
                aria-label="Bold"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_bold jodit-ui-group__bold"
                data-ref="bold"
                disabled="disabled"
                ref="bold"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_bold jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M747 1521q74 32 140 32 376 0 376-335 0-114-41-180-27-44-61.5-74t-67.5-46.5-80.5-25-84-10.5-94.5-2q-73 0-101 10 0 53-.5 159t-.5 158q0 8-1 67.5t-.5 96.5 4.5 83.5 12 66.5zm-14-746q42 7 109 7 82 0 143-13t110-44.5 74.5-89.5 25.5-142q0-70-29-122.5t-79-82-108-43.5-124-14q-50 0-130 13 0 50 4 151t4 152q0 27-.5 80t-.5 79q0 46 1 69zm-541 889l2-94q15-4 85-16t106-27q7-12 12.5-27t8.5-33.5 5.5-32.5 3-37.5.5-34v-65.5q0-982-22-1025-4-8-22-14.5t-44.5-11-49.5-7-48.5-4.5-30.5-3l-4-83q98-2 340-11.5t373-9.5q23 0 68.5.5t67.5.5q70 0 136.5 13t128.5 42 108 71 74 104.5 28 137.5q0 52-16.5 95.5t-39 72-64.5 57.5-73 45-84 40q154 35 256.5 134t102.5 248q0 100-35 179.5t-93.5 130.5-138 85.5-163.5 48.5-176 14q-44 0-132-3t-132-3q-106 0-307 11t-231 12z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Italic"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_italic jodit-ui-group__italic"
                data-ref="italic"
                disabled="disabled"
                ref="italic"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_italic jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M384 1662l17-85q6-2 81.5-21.5t111.5-37.5q28-35 41-101 1-7 62-289t114-543.5 52-296.5v-25q-24-13-54.5-18.5t-69.5-8-58-5.5l19-103q33 2 120 6.5t149.5 7 120.5 2.5q48 0 98.5-2.5t121-7 98.5-6.5q-5 39-19 89-30 10-101.5 28.5t-108.5 33.5q-8 19-14 42.5t-9 40-7.5 45.5-6.5 42q-27 148-87.5 419.5t-77.5 355.5q-2 9-13 58t-20 90-16 83.5-6 57.5l1 18q17 4 185 31-3 44-16 99-11 0-32.5 1.5t-32.5 1.5q-29 0-87-10t-86-10q-138-2-206-2-51 0-143 9t-121 11z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Underline"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_underline jodit-ui-group__underline"
                data-ref="underline"
                disabled="disabled"
                ref="underline"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_underline jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M176 223q-37-2-45-4l-3-88q13-1 40-1 60 0 112 4 132 7 166 7 86 0 168-3 116-4 146-5 56 0 86-2l-1 14 2 64v9q-60 9-124 9-60 0-79 25-13 14-13 132 0 13 .5 32.5t.5 25.5l1 229 14 280q6 124 51 202 35 59 96 92 88 47 177 47 104 0 191-28 56-18 99-51 48-36 65-64 36-56 53-114 21-73 21-229 0-79-3.5-128t-11-122.5-13.5-159.5l-4-59q-5-67-24-88-34-35-77-34l-100 2-14-3 2-86h84l205 10q76 3 196-10l18 2q6 38 6 51 0 7-4 31-45 12-84 13-73 11-79 17-15 15-15 41 0 7 1.5 27t1.5 31q8 19 22 396 6 195-15 304-15 76-41 122-38 65-112 123-75 57-182 89-109 33-255 33-167 0-284-46-119-47-179-122-61-76-83-195-16-80-16-237v-333q0-188-17-213-25-36-147-39zm1488 1409v-64q0-14-9-23t-23-9h-1472q-14 0-23 9t-9 23v64q0 14 9 23t23 9h1472q14 0 23-9t9-23z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Strike through"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_strikethrough jodit-ui-group__strikethrough"
                data-ref="strikethrough"
                disabled="disabled"
                ref="strikethrough"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_strikethrough jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M1760 896q14 0 23 9t9 23v64q0 14-9 23t-23 9h-1728q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h1728zm-1277-64q-28-35-51-80-48-97-48-188 0-181 134-309 133-127 393-127 50 0 167 19 66 12 177 48 10 38 21 118 14 123 14 183 0 18-5 45l-12 3-84-6-14-2q-50-149-103-205-88-91-210-91-114 0-182 59-67 58-67 146 0 73 66 140t279 129q69 20 173 66 58 28 95 52h-743zm507 256h411q7 39 7 92 0 111-41 212-23 55-71 104-37 35-109 81-80 48-153 66-80 21-203 21-114 0-195-23l-140-40q-57-16-72-28-8-8-8-22v-13q0-108-2-156-1-30 0-68l2-37v-44l102-2q15 34 30 71t22.5 56 12.5 27q35 57 80 94 43 36 105 57 59 22 132 22 64 0 139-27 77-26 122-86 47-61 47-129 0-84-81-157-34-29-137-71z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Clear Formatting"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_eraser jodit-ui-group__eraser"
                data-ref="eraser"
                disabled="disabled"
                ref="eraser"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_eraser jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M832 1408l336-384h-768l-336 384h768zm1013-1077q15 34 9.5 71.5t-30.5 65.5l-896 1024q-38 44-96 44h-768q-38 0-69.5-20.5t-47.5-54.5q-15-34-9.5-71.5t30.5-65.5l896-1024q38-44 96-44h768q38 0 69.5 20.5t47.5 54.5z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
            </div>
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_list jodit-ui-group_before-spacer_true jodit-ui-group_size_middle"
            >
              <span
                aria-label="Insert Unordered List"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_ul jodit-toolbar-button_with-trigger_true jodit-ui-group__ul"
                data-ref="ul"
                disabled="disabled"
                ref="ul"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_ul jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M384 1408q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm0-512q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm-1408-928q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
                        stroke-width="0"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Insert Ordered List"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_ol jodit-toolbar-button_with-trigger_true jodit-ui-group__ol"
                data-ref="ol"
                disabled="disabled"
                ref="ol"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_ol jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M381 1620q0 80-54.5 126t-135.5 46q-106 0-172-66l57-88q49 45 106 45 29 0 50.5-14.5t21.5-42.5q0-64-105-56l-26-56q8-10 32.5-43.5t42.5-54 37-38.5v-1q-16 0-48.5 1t-48.5 1v53h-106v-152h333v88l-95 115q51 12 81 49t30 88zm2-627v159h-362q-6-36-6-54 0-51 23.5-93t56.5-68 66-47.5 56.5-43.5 23.5-45q0-25-14.5-38.5t-39.5-13.5q-46 0-81 58l-85-59q24-51 71.5-79.5t105.5-28.5q73 0 123 41.5t50 112.5q0 50-34 91.5t-75 64.5-75.5 50.5-35.5 52.5h127v-60h105zm1409 319v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-14 9-23t23-9h1216q13 0 22.5 9.5t9.5 22.5zm-1408-899v99h-335v-99h107q0-41 .5-122t.5-121v-12h-2q-8 17-50 54l-71-76 136-127h106v404h108zm1408 387v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-14 9-23t23-9h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
                        stroke-width="0"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-spacer"
            />
            <div
              class="jodit-ui-group jodit-ui-group_size_middle"
            />
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_font jodit-ui-group_size_middle"
            >
              <span
                aria-label="Font family"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_font jodit-toolbar-button_with-trigger_true jodit-ui-group__font"
                data-ref="font"
                disabled="disabled"
                ref="font"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_font jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M789 559l-170 450q33 0 136.5 2t160.5 2q19 0 57-2-87-253-184-452zm-725 1105l2-79q23-7 56-12.5t57-10.5 49.5-14.5 44.5-29 31-50.5l237-616 280-724h128q8 14 11 21l205 480q33 78 106 257.5t114 274.5q15 34 58 144.5t72 168.5q20 45 35 57 19 15 88 29.5t84 20.5q6 38 6 57 0 4-.5 13t-.5 13q-63 0-190-8t-191-8q-76 0-215 7t-178 8q0-43 4-78l131-28q1 0 12.5-2.5t15.5-3.5 14.5-4.5 15-6.5 11-8 9-11 2.5-14q0-16-31-96.5t-72-177.5-42-100l-450-2q-26 58-76.5 195.5t-50.5 162.5q0 22 14 37.5t43.5 24.5 48.5 13.5 57 8.5 41 4q1 19 1 58 0 9-2 27-58 0-174.5-10t-174.5-10q-8 0-26.5 4t-21.5 4q-80 14-188 14z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Font size"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_fontsize jodit-toolbar-button_with-trigger_true jodit-ui-group__fontsize"
                data-ref="fontsize"
                disabled="disabled"
                ref="fontsize"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_fontsize jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M1744 1408q33 0 42 18.5t-11 44.5l-126 162q-20 26-49 26t-49-26l-126-162q-20-26-11-44.5t42-18.5h80v-1024h-80q-33 0-42-18.5t11-44.5l126-162q20-26 49-26t49 26l126 162q20 26 11 44.5t-42 18.5h-80v1024h80zm-1663-1279l54 27q12 5 211 5 44 0 132-2t132-2q36 0 107.5.5t107.5.5h293q6 0 21 .5t20.5 0 16-3 17.5-9 15-17.5l42-1q4 0 14 .5t14 .5q2 112 2 336 0 80-5 109-39 14-68 18-25-44-54-128-3-9-11-48t-14.5-73.5-7.5-35.5q-6-8-12-12.5t-15.5-6-13-2.5-18-.5-16.5.5q-17 0-66.5-.5t-74.5-.5-64 2-71 6q-9 81-8 136 0 94 2 388t2 455q0 16-2.5 71.5t0 91.5 12.5 69q40 21 124 42.5t120 37.5q5 40 5 50 0 14-3 29l-34 1q-76 2-218-8t-207-10q-50 0-151 9t-152 9q-3-51-3-52v-9q17-27 61.5-43t98.5-29 78-27q19-42 19-383 0-101-3-303t-3-303v-117q0-2 .5-15.5t.5-25-1-25.5-3-24-5-14q-11-12-162-12-33 0-93 12t-80 26q-19 13-34 72.5t-31.5 111-42.5 53.5q-42-26-56-44v-383z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Insert format block"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_paragraph jodit-toolbar-button_with-trigger_true jodit-ui-group__paragraph"
                data-ref="paragraph"
                disabled="disabled"
                ref="paragraph"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_paragraph jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M1534 189v73q0 29-18.5 61t-42.5 32q-50 0-54 1-26 6-32 31-3 11-3 64v1152q0 25-18 43t-43 18h-108q-25 0-43-18t-18-43v-1218h-143v1218q0 25-17.5 43t-43.5 18h-108q-26 0-43.5-18t-17.5-43v-496q-147-12-245-59-126-58-192-179-64-117-64-259 0-166 88-286 88-118 209-159 111-37 417-37h479q25 0 43 18t18 43z"
                      />
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Line height"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_lineHeight jodit-toolbar-button_with-trigger_true jodit-ui-group__lineHeight"
                data-ref="lineHeight"
                disabled="disabled"
                ref="lineHeight"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_lineHeight jodit-icon"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M5.09668 6.99707H7.17358L4.17358 3.99707L1.17358 6.99707H3.09668V17.0031H1.15881L4.15881 20.0031L7.15881 17.0031H5.09668V6.99707Z"
                      />
                       
                      <path
                        d="M22.8412 7H8.84119V5H22.8412V7Z"
                      />
                       
                      <path
                        d="M22.8412 11H8.84119V9H22.8412V11Z"
                      />
                       
                      <path
                        d="M8.84119 15H22.8412V13H8.84119V15Z"
                      />
                       
                      <path
                        d="M22.8412 19H8.84119V17H22.8412V19Z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_color jodit-ui-group_before-spacer_true jodit-ui-group_size_middle"
            >
              <span
                aria-label="Fill color or set the text color"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_brush jodit-toolbar-button_with-trigger_true jodit-ui-group__brush"
                data-ref="brush"
                disabled="disabled"
                ref="brush"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_brush jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M896 1152q0-36-20-69-1-1-15.5-22.5t-25.5-38-25-44-21-50.5q-4-16-21-16t-21 16q-7 23-21 50.5t-25 44-25.5 38-15.5 22.5q-20 33-20 69 0 53 37.5 90.5t90.5 37.5 90.5-37.5 37.5-90.5zm512-128q0 212-150 362t-362 150-362-150-150-362q0-145 81-275 6-9 62.5-90.5t101-151 99.5-178 83-201.5q9-30 34-47t51-17 51.5 17 33.5 47q28 93 83 201.5t99.5 178 101 151 62.5 90.5q81 127 81 275z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-spacer"
            />
            <div
              class="jodit-ui-group jodit-ui-group_size_middle"
            >
              <span
                aria-label="Show all"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_dots jodit-ui-group__dots"
                data-ref="dots"
                disabled="disabled"
                ref="dots"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_dots jodit-icon"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <circle
                        cx="12"
                        cy="12"
                        r="2.2"
                      />
                       
                      <circle
                        cx="12"
                        cy="5"
                        r="2.2"
                      />
                       
                      <circle
                        cx="12"
                        cy="19"
                        r="2.2"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit-jodit__workplace-slot_top_true"
        contenteditable="false"
      />
      <div
        class="jodit-jodit__workplace-slot_center_true"
        contenteditable="false"
        style="min-height: 198px;"
      >
        <div
          class="jodit-jodit__workplace-slot_left_true"
          contenteditable="false"
        />
        <div
          class="jodit-workplace"
          contenteditable="false"
          style="min-height: 198px; height: auto;"
          tabindex="-1"
        >
          <div
            aria-disabled="true"
            class="jodit-wysiwyg"
            spellcheck="false"
            style="min-height: 198px;"
            tabindex="-1"
          >
            <p>
              Hello, world!
            </p>
          </div>
          <div
            class="jodit-source"
          >
            <textarea
              class="jodit-source__mirror"
              readonly="true"
              style="height: 0px; min-height: 198px;"
            />
          </div>
        </div>
        <div
          class="jodit-jodit__workplace-slot_right_true"
          contenteditable="false"
        />
      </div>
      <div
        class="jodit-jodit__workplace-slot_bottom_true"
        contenteditable="false"
      />
      <div
        class="jodit-status-bar"
      >
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <span>
            Chars: 0
          </span>
        </div>
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <span>
            Words: 0
          </span>
        </div>
        <div
          class="jodit-status-bar__item"
        />
        <div
          class="jodit-status-bar__item"
        >
          <div
            class="jodit-xpath"
          />
        </div>
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <a
            class="jodit-status-bar-link"
            href="https://xdsoft.net/jodit/"
            style="text-transform: uppercase"
            tabindex="-1"
            target="_blank"
          >
            
							Powered by Jodit
						
          </a>
        </div>
      </div>
    </div>
    <textarea
      style="display: none;"
    >
      &lt;p&gt;Hello, world!&lt;/p&gt;
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`Smoke Test > should render without crashing 1`] = `
<DocumentFragment>
  <div
    class="jodit-react-container"
  >
    <div
      class="jodit-container jodit jodit_theme_default jodit-wysiwyg_mode"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; --jd-jodit-workplace-height: auto; width: auto;"
    >
      <div
        class="jodit-toolbar__box"
      >
        <div
          class="jodit-toolbar-editor-collection jodit-toolbar-editor-collection_mode_horizontal jodit-toolbar-editor-collection_size_middle"
        >
          <input
            disabled="true"
            style="width: 0; height:0; position: absolute; visibility: hidden;"
            tab-index="-1"
          />
          <div
            class="jodit-ui-group jodit-ui-group_line_true jodit-ui-group_size_middle"
          >
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_font-style jodit-ui-group_size_middle"
            >
              <span
                aria-label="Bold"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_bold jodit-ui-group__bold"
                data-ref="bold"
                ref="bold"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_bold jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M747 1521q74 32 140 32 376 0 376-335 0-114-41-180-27-44-61.5-74t-67.5-46.5-80.5-25-84-10.5-94.5-2q-73 0-101 10 0 53-.5 159t-.5 158q0 8-1 67.5t-.5 96.5 4.5 83.5 12 66.5zm-14-746q42 7 109 7 82 0 143-13t110-44.5 74.5-89.5 25.5-142q0-70-29-122.5t-79-82-108-43.5-124-14q-50 0-130 13 0 50 4 151t4 152q0 27-.5 80t-.5 79q0 46 1 69zm-541 889l2-94q15-4 85-16t106-27q7-12 12.5-27t8.5-33.5 5.5-32.5 3-37.5.5-34v-65.5q0-982-22-1025-4-8-22-14.5t-44.5-11-49.5-7-48.5-4.5-30.5-3l-4-83q98-2 340-11.5t373-9.5q23 0 68.5.5t67.5.5q70 0 136.5 13t128.5 42 108 71 74 104.5 28 137.5q0 52-16.5 95.5t-39 72-64.5 57.5-73 45-84 40q154 35 256.5 134t102.5 248q0 100-35 179.5t-93.5 130.5-138 85.5-163.5 48.5-176 14q-44 0-132-3t-132-3q-106 0-307 11t-231 12z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Italic"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_italic jodit-ui-group__italic"
                data-ref="italic"
                ref="italic"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_italic jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M384 1662l17-85q6-2 81.5-21.5t111.5-37.5q28-35 41-101 1-7 62-289t114-543.5 52-296.5v-25q-24-13-54.5-18.5t-69.5-8-58-5.5l19-103q33 2 120 6.5t149.5 7 120.5 2.5q48 0 98.5-2.5t121-7 98.5-6.5q-5 39-19 89-30 10-101.5 28.5t-108.5 33.5q-8 19-14 42.5t-9 40-7.5 45.5-6.5 42q-27 148-87.5 419.5t-77.5 355.5q-2 9-13 58t-20 90-16 83.5-6 57.5l1 18q17 4 185 31-3 44-16 99-11 0-32.5 1.5t-32.5 1.5q-29 0-87-10t-86-10q-138-2-206-2-51 0-143 9t-121 11z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Underline"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_underline jodit-ui-group__underline"
                data-ref="underline"
                ref="underline"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_underline jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M176 223q-37-2-45-4l-3-88q13-1 40-1 60 0 112 4 132 7 166 7 86 0 168-3 116-4 146-5 56 0 86-2l-1 14 2 64v9q-60 9-124 9-60 0-79 25-13 14-13 132 0 13 .5 32.5t.5 25.5l1 229 14 280q6 124 51 202 35 59 96 92 88 47 177 47 104 0 191-28 56-18 99-51 48-36 65-64 36-56 53-114 21-73 21-229 0-79-3.5-128t-11-122.5-13.5-159.5l-4-59q-5-67-24-88-34-35-77-34l-100 2-14-3 2-86h84l205 10q76 3 196-10l18 2q6 38 6 51 0 7-4 31-45 12-84 13-73 11-79 17-15 15-15 41 0 7 1.5 27t1.5 31q8 19 22 396 6 195-15 304-15 76-41 122-38 65-112 123-75 57-182 89-109 33-255 33-167 0-284-46-119-47-179-122-61-76-83-195-16-80-16-237v-333q0-188-17-213-25-36-147-39zm1488 1409v-64q0-14-9-23t-23-9h-1472q-14 0-23 9t-9 23v64q0 14 9 23t23 9h1472q14 0 23-9t9-23z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Strike through"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_strikethrough jodit-ui-group__strikethrough"
                data-ref="strikethrough"
                ref="strikethrough"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_strikethrough jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M1760 896q14 0 23 9t9 23v64q0 14-9 23t-23 9h-1728q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h1728zm-1277-64q-28-35-51-80-48-97-48-188 0-181 134-309 133-127 393-127 50 0 167 19 66 12 177 48 10 38 21 118 14 123 14 183 0 18-5 45l-12 3-84-6-14-2q-50-149-103-205-88-91-210-91-114 0-182 59-67 58-67 146 0 73 66 140t279 129q69 20 173 66 58 28 95 52h-743zm507 256h411q7 39 7 92 0 111-41 212-23 55-71 104-37 35-109 81-80 48-153 66-80 21-203 21-114 0-195-23l-140-40q-57-16-72-28-8-8-8-22v-13q0-108-2-156-1-30 0-68l2-37v-44l102-2q15 34 30 71t22.5 56 12.5 27q35 57 80 94 43 36 105 57 59 22 132 22 64 0 139-27 77-26 122-86 47-61 47-129 0-84-81-157-34-29-137-71z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Clear Formatting"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_eraser jodit-ui-group__eraser"
                data-ref="eraser"
                ref="eraser"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_eraser jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M832 1408l336-384h-768l-336 384h768zm1013-1077q15 34 9.5 71.5t-30.5 65.5l-896 1024q-38 44-96 44h-768q-38 0-69.5-20.5t-47.5-54.5q-15-34-9.5-71.5t30.5-65.5l896-1024q38-44 96-44h768q38 0 69.5 20.5t47.5 54.5z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
            </div>
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_list jodit-ui-group_before-spacer_true jodit-ui-group_size_middle"
            >
              <span
                aria-label="Insert Unordered List"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_ul jodit-toolbar-button_with-trigger_true jodit-ui-group__ul"
                data-ref="ul"
                ref="ul"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_ul jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M384 1408q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm0-512q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm-1408-928q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1408 416v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
                        stroke-width="0"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Insert Ordered List"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_ol jodit-toolbar-button_with-trigger_true jodit-ui-group__ol"
                data-ref="ol"
                ref="ol"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_ol jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M381 1620q0 80-54.5 126t-135.5 46q-106 0-172-66l57-88q49 45 106 45 29 0 50.5-14.5t21.5-42.5q0-64-105-56l-26-56q8-10 32.5-43.5t42.5-54 37-38.5v-1q-16 0-48.5 1t-48.5 1v53h-106v-152h333v88l-95 115q51 12 81 49t30 88zm2-627v159h-362q-6-36-6-54 0-51 23.5-93t56.5-68 66-47.5 56.5-43.5 23.5-45q0-25-14.5-38.5t-39.5-13.5q-46 0-81 58l-85-59q24-51 71.5-79.5t105.5-28.5q73 0 123 41.5t50 112.5q0 50-34 91.5t-75 64.5-75.5 50.5-35.5 52.5h127v-60h105zm1409 319v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-14 9-23t23-9h1216q13 0 22.5 9.5t9.5 22.5zm-1408-899v99h-335v-99h107q0-41 .5-122t.5-121v-12h-2q-8 17-50 54l-71-76 136-127h106v404h108zm1408 387v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-14 9-23t23-9h1216q13 0 22.5 9.5t9.5 22.5zm0-512v192q0 13-9.5 22.5t-22.5 9.5h-1216q-13 0-22.5-9.5t-9.5-22.5v-192q0-13 9.5-22.5t22.5-9.5h1216q13 0 22.5 9.5t9.5 22.5z"
                        stroke-width="0"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-spacer"
            />
            <div
              class="jodit-ui-group jodit-ui-group_size_middle"
            />
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_font jodit-ui-group_size_middle"
            >
              <span
                aria-label="Font family"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_font jodit-toolbar-button_with-trigger_true jodit-ui-group__font"
                data-ref="font"
                ref="font"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_font jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M789 559l-170 450q33 0 136.5 2t160.5 2q19 0 57-2-87-253-184-452zm-725 1105l2-79q23-7 56-12.5t57-10.5 49.5-14.5 44.5-29 31-50.5l237-616 280-724h128q8 14 11 21l205 480q33 78 106 257.5t114 274.5q15 34 58 144.5t72 168.5q20 45 35 57 19 15 88 29.5t84 20.5q6 38 6 57 0 4-.5 13t-.5 13q-63 0-190-8t-191-8q-76 0-215 7t-178 8q0-43 4-78l131-28q1 0 12.5-2.5t15.5-3.5 14.5-4.5 15-6.5 11-8 9-11 2.5-14q0-16-31-96.5t-72-177.5-42-100l-450-2q-26 58-76.5 195.5t-50.5 162.5q0 22 14 37.5t43.5 24.5 48.5 13.5 57 8.5 41 4q1 19 1 58 0 9-2 27-58 0-174.5-10t-174.5-10q-8 0-26.5 4t-21.5 4q-80 14-188 14z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Font size"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_fontsize jodit-toolbar-button_with-trigger_true jodit-ui-group__fontsize"
                data-ref="fontsize"
                ref="fontsize"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_fontsize jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M1744 1408q33 0 42 18.5t-11 44.5l-126 162q-20 26-49 26t-49-26l-126-162q-20-26-11-44.5t42-18.5h80v-1024h-80q-33 0-42-18.5t11-44.5l126-162q20-26 49-26t49 26l126 162q20 26 11 44.5t-42 18.5h-80v1024h80zm-1663-1279l54 27q12 5 211 5 44 0 132-2t132-2q36 0 107.5.5t107.5.5h293q6 0 21 .5t20.5 0 16-3 17.5-9 15-17.5l42-1q4 0 14 .5t14 .5q2 112 2 336 0 80-5 109-39 14-68 18-25-44-54-128-3-9-11-48t-14.5-73.5-7.5-35.5q-6-8-12-12.5t-15.5-6-13-2.5-18-.5-16.5.5q-17 0-66.5-.5t-74.5-.5-64 2-71 6q-9 81-8 136 0 94 2 388t2 455q0 16-2.5 71.5t0 91.5 12.5 69q40 21 124 42.5t120 37.5q5 40 5 50 0 14-3 29l-34 1q-76 2-218-8t-207-10q-50 0-151 9t-152 9q-3-51-3-52v-9q17-27 61.5-43t98.5-29 78-27q19-42 19-383 0-101-3-303t-3-303v-117q0-2 .5-15.5t.5-25-1-25.5-3-24-5-14q-11-12-162-12-33 0-93 12t-80 26q-19 13-34 72.5t-31.5 111-42.5 53.5q-42-26-56-44v-383z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Insert format block"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_paragraph jodit-toolbar-button_with-trigger_true jodit-ui-group__paragraph"
                data-ref="paragraph"
                ref="paragraph"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_paragraph jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M1534 189v73q0 29-18.5 61t-42.5 32q-50 0-54 1-26 6-32 31-3 11-3 64v1152q0 25-18 43t-43 18h-108q-25 0-43-18t-18-43v-1218h-143v1218q0 25-17.5 43t-43.5 18h-108q-26 0-43.5-18t-17.5-43v-496q-147-12-245-59-126-58-192-179-64-117-64-259 0-166 88-286 88-118 209-159 111-37 417-37h479q25 0 43 18t18 43z"
                      />
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Line height"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_lineHeight jodit-toolbar-button_with-trigger_true jodit-ui-group__lineHeight"
                data-ref="lineHeight"
                ref="lineHeight"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_lineHeight jodit-icon"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M5.09668 6.99707H7.17358L4.17358 3.99707L1.17358 6.99707H3.09668V17.0031H1.15881L4.15881 20.0031L7.15881 17.0031H5.09668V6.99707Z"
                      />
                       
                      <path
                        d="M22.8412 7H8.84119V5H22.8412V7Z"
                      />
                       
                      <path
                        d="M22.8412 11H8.84119V9H22.8412V11Z"
                      />
                       
                      <path
                        d="M8.84119 15H22.8412V13H8.84119V15Z"
                      />
                       
                      <path
                        d="M22.8412 19H8.84119V17H22.8412V19Z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_color jodit-ui-group_before-spacer_true jodit-ui-group_size_middle"
            >
              <span
                aria-label="Fill color or set the text color"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_brush jodit-toolbar-button_with-trigger_true jodit-ui-group__brush"
                data-ref="brush"
                ref="brush"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_brush jodit-icon"
                      viewBox="0 0 1792 1792"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <path
                        d="M896 1152q0-36-20-69-1-1-15.5-22.5t-25.5-38-25-44-21-50.5q-4-16-21-16t-21 16q-7 23-21 50.5t-25 44-25.5 38-15.5 22.5q-20 33-20 69 0 53 37.5 90.5t90.5 37.5 90.5-37.5 37.5-90.5zm512-128q0 212-150 362t-362 150-362-150-150-362q0-145 81-275 6-9 62.5-90.5t101-151 99.5-178 83-201.5q9-30 34-47t51-17 51.5 17 33.5 47q28 93 83 201.5t99.5 178 101 151 62.5 90.5q81 127 81 275z"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  class="jodit-toolbar-button__trigger"
                  role="trigger"
                >
                  <svg
                    viewBox="0 0 10 10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <path
                      d="M.941 4.523a.75.75 0 1 1 1.06-1.06l3.006 3.005 3.005-3.005a.75.75 0 1 1 1.06 1.06l-3.549 3.55a.75.75 0 0 1-1.168-.136L.941 4.523z"
                    />
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-spacer"
            />
            <div
              class="jodit-ui-group jodit-ui-group_size_middle"
            >
              <span
                aria-label="Show all"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_dots jodit-ui-group__dots"
                data-ref="dots"
                ref="dots"
                role="listitem"
              >
                <button
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_dots jodit-icon"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <circle
                        cx="12"
                        cy="12"
                        r="2.2"
                      />
                       
                      <circle
                        cx="12"
                        cy="5"
                        r="2.2"
                      />
                       
                      <circle
                        cx="12"
                        cy="19"
                        r="2.2"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit-jodit__workplace-slot_top_true"
        contenteditable="false"
      />
      <div
        class="jodit-jodit__workplace-slot_center_true"
        contenteditable="false"
        style="min-height: 198px;"
      >
        <div
          class="jodit-jodit__workplace-slot_left_true"
          contenteditable="false"
        />
        <div
          class="jodit-workplace"
          contenteditable="false"
          style="min-height: 198px; height: auto;"
          tabindex="-1"
        >
          <div
            aria-disabled="false"
            class="jodit-wysiwyg"
            contenteditable="true"
            spellcheck="false"
            style="min-height: 198px;"
            tabindex="-1"
          >
            <p>
              Hello, world!
            </p>
          </div>
          <div
            class="jodit-source"
          >
            <textarea
              class="jodit-source__mirror"
              style="height: 0px; min-height: 198px;"
            />
          </div>
        </div>
        <div
          class="jodit-jodit__workplace-slot_right_true"
          contenteditable="false"
        />
      </div>
      <div
        class="jodit-jodit__workplace-slot_bottom_true"
        contenteditable="false"
      />
      <div
        class="jodit-status-bar"
      >
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <span>
            Chars: 0
          </span>
        </div>
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <span>
            Words: 0
          </span>
        </div>
        <div
          class="jodit-status-bar__item"
        />
        <div
          class="jodit-status-bar__item"
        >
          <div
            class="jodit-xpath"
          />
        </div>
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <a
            class="jodit-status-bar-link"
            href="https://xdsoft.net/jodit/"
            style="text-transform: uppercase"
            tabindex="-1"
            target="_blank"
          >
            
							Powered by Jodit
						
          </a>
        </div>
      </div>
    </div>
    <textarea
      style="display: none;"
    >
      &lt;p&gt;Hello, world!&lt;/p&gt;
    </textarea>
  </div>
</DocumentFragment>
`;
